--
-- PostgreSQL database dump
--

-- Dumped from database version 16.1
-- Dumped by pg_dump version 17.0

-- Started on 2026-09-15 11:13:00

SET statement_timeout = 0;
SET lock_timeout = 0;
SET idle_in_transaction_session_timeout = 0;
SET transaction_timeout = 0;
SET client_encoding = 'UTF8';
SET standard_conforming_strings = on;
SELECT pg_catalog.set_config('search_path', '', false);
SET check_function_bodies = false;
SET xmloption = content;
SET client_min_messages = warning;
SET row_security = off;

SET default_tablespace = '';

SET default_table_access_method = heap;

--
-- TOC entry 220 (class 1259 OID 459027)
-- Name: cinemas; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.cinemas (
    id integer NOT NULL,
    name character varying(100) NOT NULL,
    city character varying(100) NOT NULL,
    address text,
    created_at timestamp with time zone DEFAULT CURRENT_TIMESTAMP
);


ALTER TABLE public.cinemas OWNER TO postgres;

--
-- TOC entry 219 (class 1259 OID 459026)
-- Name: cinemas_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

CREATE SEQUENCE public.cinemas_id_seq
    AS integer
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1;


ALTER SEQUENCE public.cinemas_id_seq OWNER TO postgres;

--
-- TOC entry 4950 (class 0 OID 0)
-- Dependencies: 219
-- Name: cinemas_id_seq; Type: SEQUENCE OWNED BY; Schema: public; Owner: postgres
--

ALTER SEQUENCE public.cinemas_id_seq OWNED BY public.cinemas.id;


--
-- TOC entry 216 (class 1259 OID 458764)
-- Name: goose_db_version; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.goose_db_version (
    id integer NOT NULL,
    version_id bigint NOT NULL,
    is_applied boolean NOT NULL,
    tstamp timestamp without time zone DEFAULT now() NOT NULL
);


ALTER TABLE public.goose_db_version OWNER TO postgres;

--
-- TOC entry 215 (class 1259 OID 458763)
-- Name: goose_db_version_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

ALTER TABLE public.goose_db_version ALTER COLUMN id ADD GENERATED BY DEFAULT AS IDENTITY (
    SEQUENCE NAME public.goose_db_version_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1
);


--
-- TOC entry 224 (class 1259 OID 459053)
-- Name: movies; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.movies (
    id integer NOT NULL,
    title character varying(200) NOT NULL,
    duration_minutes integer NOT NULL,
    genre character varying(100),
    poster_url character varying(255),
    created_at timestamp with time zone DEFAULT CURRENT_TIMESTAMP
);


ALTER TABLE public.movies OWNER TO postgres;

--
-- TOC entry 223 (class 1259 OID 459052)
-- Name: movies_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

CREATE SEQUENCE public.movies_id_seq
    AS integer
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1;


ALTER SEQUENCE public.movies_id_seq OWNER TO postgres;

--
-- TOC entry 4951 (class 0 OID 0)
-- Dependencies: 223
-- Name: movies_id_seq; Type: SEQUENCE OWNED BY; Schema: public; Owner: postgres
--

ALTER SEQUENCE public.movies_id_seq OWNED BY public.movies.id;


--
-- TOC entry 228 (class 1259 OID 459087)
-- Name: orders; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.orders (
    id bigint NOT NULL,
    order_code character varying(50) NOT NULL,
    user_id bigint NOT NULL,
    showtime_id bigint NOT NULL,
    total_amount numeric(10,2) NOT NULL,
    status character varying(20) DEFAULT 'pending'::character varying NOT NULL,
    refund_reason text,
    payment_deadline timestamp with time zone NOT NULL,
    created_at timestamp with time zone DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamp with time zone DEFAULT CURRENT_TIMESTAMP
);


ALTER TABLE public.orders OWNER TO postgres;

--
-- TOC entry 227 (class 1259 OID 459086)
-- Name: orders_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

CREATE SEQUENCE public.orders_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1;


ALTER SEQUENCE public.orders_id_seq OWNER TO postgres;

--
-- TOC entry 4952 (class 0 OID 0)
-- Dependencies: 227
-- Name: orders_id_seq; Type: SEQUENCE OWNED BY; Schema: public; Owner: postgres
--

ALTER SEQUENCE public.orders_id_seq OWNED BY public.orders.id;


--
-- TOC entry 226 (class 1259 OID 459064)
-- Name: showtimes; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.showtimes (
    id bigint NOT NULL,
    movie_id integer NOT NULL,
    studio_id integer NOT NULL,
    start_time timestamp with time zone NOT NULL,
    end_time timestamp with time zone NOT NULL,
    price numeric(10,2) NOT NULL,
    status character varying(20) DEFAULT 'scheduled'::character varying NOT NULL,
    created_at timestamp with time zone DEFAULT CURRENT_TIMESTAMP,
    updated_at timestamp with time zone DEFAULT CURRENT_TIMESTAMP
);


ALTER TABLE public.showtimes OWNER TO postgres;

--
-- TOC entry 225 (class 1259 OID 459063)
-- Name: showtimes_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

CREATE SEQUENCE public.showtimes_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1;


ALTER SEQUENCE public.showtimes_id_seq OWNER TO postgres;

--
-- TOC entry 4953 (class 0 OID 0)
-- Dependencies: 225
-- Name: showtimes_id_seq; Type: SEQUENCE OWNED BY; Schema: public; Owner: postgres
--

ALTER SEQUENCE public.showtimes_id_seq OWNED BY public.showtimes.id;


--
-- TOC entry 222 (class 1259 OID 459038)
-- Name: studios; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.studios (
    id integer NOT NULL,
    cinema_id integer NOT NULL,
    name character varying(50) NOT NULL,
    total_seats integer DEFAULT 50 NOT NULL,
    created_at timestamp with time zone DEFAULT CURRENT_TIMESTAMP
);


ALTER TABLE public.studios OWNER TO postgres;

--
-- TOC entry 221 (class 1259 OID 459037)
-- Name: studios_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

CREATE SEQUENCE public.studios_id_seq
    AS integer
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1;


ALTER SEQUENCE public.studios_id_seq OWNER TO postgres;

--
-- TOC entry 4954 (class 0 OID 0)
-- Dependencies: 221
-- Name: studios_id_seq; Type: SEQUENCE OWNED BY; Schema: public; Owner: postgres
--

ALTER SEQUENCE public.studios_id_seq OWNED BY public.studios.id;


--
-- TOC entry 230 (class 1259 OID 459114)
-- Name: tickets; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.tickets (
    id bigint NOT NULL,
    order_id bigint NOT NULL,
    showtime_id bigint NOT NULL,
    seat_number character varying(10) NOT NULL,
    price numeric(10,2) NOT NULL,
    status character varying(20) DEFAULT 'locked'::character varying NOT NULL,
    created_at timestamp with time zone DEFAULT CURRENT_TIMESTAMP
);


ALTER TABLE public.tickets OWNER TO postgres;

--
-- TOC entry 229 (class 1259 OID 459113)
-- Name: tickets_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

CREATE SEQUENCE public.tickets_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1;


ALTER SEQUENCE public.tickets_id_seq OWNER TO postgres;

--
-- TOC entry 4955 (class 0 OID 0)
-- Dependencies: 229
-- Name: tickets_id_seq; Type: SEQUENCE OWNED BY; Schema: public; Owner: postgres
--

ALTER SEQUENCE public.tickets_id_seq OWNED BY public.tickets.id;


--
-- TOC entry 218 (class 1259 OID 459015)
-- Name: users; Type: TABLE; Schema: public; Owner: postgres
--

CREATE TABLE public.users (
    id bigint NOT NULL,
    name character varying(100) NOT NULL,
    email character varying(100) NOT NULL,
    password character varying(255) NOT NULL,
    role character varying(20) DEFAULT 'customer'::character varying NOT NULL,
    created_at timestamp with time zone DEFAULT CURRENT_TIMESTAMP
);


ALTER TABLE public.users OWNER TO postgres;

--
-- TOC entry 217 (class 1259 OID 459014)
-- Name: users_id_seq; Type: SEQUENCE; Schema: public; Owner: postgres
--

CREATE SEQUENCE public.users_id_seq
    START WITH 1
    INCREMENT BY 1
    NO MINVALUE
    NO MAXVALUE
    CACHE 1;


ALTER SEQUENCE public.users_id_seq OWNER TO postgres;

--
-- TOC entry 4956 (class 0 OID 0)
-- Dependencies: 217
-- Name: users_id_seq; Type: SEQUENCE OWNED BY; Schema: public; Owner: postgres
--

ALTER SEQUENCE public.users_id_seq OWNED BY public.users.id;


--
-- TOC entry 4727 (class 2604 OID 459030)
-- Name: cinemas id; Type: DEFAULT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.cinemas ALTER COLUMN id SET DEFAULT nextval('public.cinemas_id_seq'::regclass);


--
-- TOC entry 4732 (class 2604 OID 459056)
-- Name: movies id; Type: DEFAULT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.movies ALTER COLUMN id SET DEFAULT nextval('public.movies_id_seq'::regclass);


--
-- TOC entry 4738 (class 2604 OID 459090)
-- Name: orders id; Type: DEFAULT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.orders ALTER COLUMN id SET DEFAULT nextval('public.orders_id_seq'::regclass);


--
-- TOC entry 4734 (class 2604 OID 459067)
-- Name: showtimes id; Type: DEFAULT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.showtimes ALTER COLUMN id SET DEFAULT nextval('public.showtimes_id_seq'::regclass);


--
-- TOC entry 4729 (class 2604 OID 459041)
-- Name: studios id; Type: DEFAULT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.studios ALTER COLUMN id SET DEFAULT nextval('public.studios_id_seq'::regclass);


--
-- TOC entry 4742 (class 2604 OID 459117)
-- Name: tickets id; Type: DEFAULT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.tickets ALTER COLUMN id SET DEFAULT nextval('public.tickets_id_seq'::regclass);


--
-- TOC entry 4724 (class 2604 OID 459018)
-- Name: users id; Type: DEFAULT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.users ALTER COLUMN id SET DEFAULT nextval('public.users_id_seq'::regclass);


--
-- TOC entry 4934 (class 0 OID 459027)
-- Dependencies: 220
-- Data for Name: cinemas; Type: TABLE DATA; Schema: public; Owner: postgres
--

COPY public.cinemas (id, name, city, address, created_at) FROM stdin;
1	XXI Grand Indonesia	Jakarta	Grand Indonesia Shopping Town, Jl. M.H. Thamrin No.1, Jakarta Pusat	2026-09-15 10:45:41.347655+07
2	Cinepolis Paragon Mall	Semarang	Pollux Mall Paragon, Jl. Pemuda No.118, Sekayu, Kota Semarang	2026-09-15 10:45:41.347655+07
3	XXI Tunjungan Plaza	Surabaya	Tunjungan Plaza 5, Jl. Embong Malang No.1-30, Surabaya	2026-09-15 10:45:41.347655+07
4	XXI Beachwalk Bali	Denpasar	Beachwalk Shopping Center, Jl. Pantai Kuta, Badung, Bali	2026-09-15 10:45:41.347655+07
\.


--
-- TOC entry 4930 (class 0 OID 458764)
-- Dependencies: 216
-- Data for Name: goose_db_version; Type: TABLE DATA; Schema: public; Owner: postgres
--

COPY public.goose_db_version (id, version_id, is_applied, tstamp) FROM stdin;
1	0	t	2026-09-15 00:46:51.277106
16	20250915000001	t	2026-09-15 10:31:47.26595
17	20250915000002	t	2026-09-15 10:31:47.39328
18	20250915000003	t	2026-09-15 10:31:47.404745
19	20250915000004	t	2026-09-15 10:31:47.416423
20	20250915000005	t	2026-09-15 10:31:47.428288
21	20250915000006	t	2026-09-15 10:31:47.442696
22	20250915000007	t	2026-09-15 10:31:47.46081
\.


--
-- TOC entry 4938 (class 0 OID 459053)
-- Dependencies: 224
-- Data for Name: movies; Type: TABLE DATA; Schema: public; Owner: postgres
--

COPY public.movies (id, title, duration_minutes, genre, poster_url, created_at) FROM stdin;
1	Inception	148	Sci-Fi, Action	https://image.tmdb.org/t/p/w500/edv5CZvWj09upOsy2Y6IwDhK8bt.jpg	2026-09-15 10:45:41.330887+07
2	Interstellar	169	Sci-Fi, Adventure, Drama	https://image.tmdb.org/t/p/w500/gEU2QniE6E77NI6lCU6MxlNBvIx.jpg	2026-09-15 10:45:41.330887+07
3	The Dark Knight	152	Action, Crime, Drama	https://image.tmdb.org/t/p/w500/qJ2tW6WMUDux911r6m7haRef0WH.jpg	2026-09-15 10:45:41.330887+07
4	Dune: Part Two	166	Sci-Fi, Adventure	https://image.tmdb.org/t/p/w500/1pdfLvkbY9ohJlCjQH2CZjjYVvJ.jpg	2026-09-15 10:45:41.330887+07
5	Agak Laen	119	Comedy, Horror	https://image.tmdb.org/t/p/w500/agak_laen_poster.jpg	2026-09-15 10:45:41.330887+07
\.


--
-- TOC entry 4942 (class 0 OID 459087)
-- Dependencies: 228
-- Data for Name: orders; Type: TABLE DATA; Schema: public; Owner: postgres
--

COPY public.orders (id, order_code, user_id, showtime_id, total_amount, status, refund_reason, payment_deadline, created_at, updated_at) FROM stdin;
\.


--
-- TOC entry 4940 (class 0 OID 459064)
-- Dependencies: 226
-- Data for Name: showtimes; Type: TABLE DATA; Schema: public; Owner: postgres
--

COPY public.showtimes (id, movie_id, studio_id, start_time, end_time, price, status, created_at, updated_at) FROM stdin;
1	1	1	2026-09-20 14:00:00+07	2026-09-20 16:30:00+07	50000.00	scheduled	2026-09-15 10:46:07.88582+07	2026-09-15 10:46:07.88582+07
2	3	3	2026-09-20 14:00:00+07	2026-09-20 16:30:00+07	50000.00	scheduled	2026-09-15 10:48:04.085607+07	2026-09-15 10:48:04.085607+07
3	2	2	2026-09-20 14:00:00+07	2026-09-20 16:30:00+07	50000.00	scheduled	2026-09-15 10:48:21.580657+07	2026-09-15 10:48:21.580657+07
4	2	1	2026-09-20 12:00:00+07	2026-09-20 12:30:00+07	50000.00	scheduled	2026-09-15 10:49:26.861618+07	2026-09-15 10:49:26.861618+07
\.


--
-- TOC entry 4936 (class 0 OID 459038)
-- Dependencies: 222
-- Data for Name: studios; Type: TABLE DATA; Schema: public; Owner: postgres
--

COPY public.studios (id, cinema_id, name, total_seats, created_at) FROM stdin;
1	1	Studio 1	50	2026-09-15 10:45:41.358392+07
2	1	Studio 2	50	2026-09-15 10:45:41.36347+07
3	1	IMAX	100	2026-09-15 10:45:41.365354+07
4	1	Premiere	30	2026-09-15 10:45:41.366985+07
5	2	Studio 1	50	2026-09-15 10:45:41.369231+07
6	2	Studio 2	50	2026-09-15 10:45:41.370309+07
7	2	Macro XE	100	2026-09-15 10:45:41.371526+07
8	3	Studio 1	50	2026-09-15 10:45:41.373988+07
9	3	Studio 2	50	2026-09-15 10:45:41.375153+07
10	3	IMAX	100	2026-09-15 10:45:41.376342+07
11	4	Studio 1	50	2026-09-15 10:45:41.378453+07
12	4	Premiere	30	2026-09-15 10:45:41.379576+07
\.


--
-- TOC entry 4944 (class 0 OID 459114)
-- Dependencies: 230
-- Data for Name: tickets; Type: TABLE DATA; Schema: public; Owner: postgres
--

COPY public.tickets (id, order_id, showtime_id, seat_number, price, status, created_at) FROM stdin;
\.


--
-- TOC entry 4932 (class 0 OID 459015)
-- Dependencies: 218
-- Data for Name: users; Type: TABLE DATA; Schema: public; Owner: postgres
--

COPY public.users (id, name, email, password, role, created_at) FROM stdin;
1	Admin	admin@example.com	$2a$10$ntwxNBGnANVsN9GHY.XwqeNXLONxtQfTpzxSw17V1fkuoBzG7MO16	admin	2026-09-15 10:34:02.289684+07
2	User	user@example.com	$2a$10$rMEv6ALBlRhTqJiSYhCrPO..Hg/wVR5/s1Th/Xd.8oi2lmgag715C	customer	2026-09-15 10:35:04.561659+07
\.


--
-- TOC entry 4957 (class 0 OID 0)
-- Dependencies: 219
-- Name: cinemas_id_seq; Type: SEQUENCE SET; Schema: public; Owner: postgres
--

SELECT pg_catalog.setval('public.cinemas_id_seq', 4, true);


--
-- TOC entry 4958 (class 0 OID 0)
-- Dependencies: 215
-- Name: goose_db_version_id_seq; Type: SEQUENCE SET; Schema: public; Owner: postgres
--

SELECT pg_catalog.setval('public.goose_db_version_id_seq', 22, true);


--
-- TOC entry 4959 (class 0 OID 0)
-- Dependencies: 223
-- Name: movies_id_seq; Type: SEQUENCE SET; Schema: public; Owner: postgres
--

SELECT pg_catalog.setval('public.movies_id_seq', 5, true);


--
-- TOC entry 4960 (class 0 OID 0)
-- Dependencies: 227
-- Name: orders_id_seq; Type: SEQUENCE SET; Schema: public; Owner: postgres
--

SELECT pg_catalog.setval('public.orders_id_seq', 1, false);


--
-- TOC entry 4961 (class 0 OID 0)
-- Dependencies: 225
-- Name: showtimes_id_seq; Type: SEQUENCE SET; Schema: public; Owner: postgres
--

SELECT pg_catalog.setval('public.showtimes_id_seq', 4, true);


--
-- TOC entry 4962 (class 0 OID 0)
-- Dependencies: 221
-- Name: studios_id_seq; Type: SEQUENCE SET; Schema: public; Owner: postgres
--

SELECT pg_catalog.setval('public.studios_id_seq', 12, true);


--
-- TOC entry 4963 (class 0 OID 0)
-- Dependencies: 229
-- Name: tickets_id_seq; Type: SEQUENCE SET; Schema: public; Owner: postgres
--

SELECT pg_catalog.setval('public.tickets_id_seq', 1, false);


--
-- TOC entry 4964 (class 0 OID 0)
-- Dependencies: 217
-- Name: users_id_seq; Type: SEQUENCE SET; Schema: public; Owner: postgres
--

SELECT pg_catalog.setval('public.users_id_seq', 4, true);


--
-- TOC entry 4753 (class 2606 OID 459035)
-- Name: cinemas cinemas_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.cinemas
    ADD CONSTRAINT cinemas_pkey PRIMARY KEY (id);


--
-- TOC entry 4746 (class 2606 OID 458769)
-- Name: goose_db_version goose_db_version_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.goose_db_version
    ADD CONSTRAINT goose_db_version_pkey PRIMARY KEY (id);


--
-- TOC entry 4760 (class 2606 OID 459061)
-- Name: movies movies_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.movies
    ADD CONSTRAINT movies_pkey PRIMARY KEY (id);


--
-- TOC entry 4770 (class 2606 OID 459099)
-- Name: orders orders_order_code_key; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.orders
    ADD CONSTRAINT orders_order_code_key UNIQUE (order_code);


--
-- TOC entry 4772 (class 2606 OID 459097)
-- Name: orders orders_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.orders
    ADD CONSTRAINT orders_pkey PRIMARY KEY (id);


--
-- TOC entry 4765 (class 2606 OID 459072)
-- Name: showtimes showtimes_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.showtimes
    ADD CONSTRAINT showtimes_pkey PRIMARY KEY (id);


--
-- TOC entry 4757 (class 2606 OID 459045)
-- Name: studios studios_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.studios
    ADD CONSTRAINT studios_pkey PRIMARY KEY (id);


--
-- TOC entry 4776 (class 2606 OID 459121)
-- Name: tickets tickets_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.tickets
    ADD CONSTRAINT tickets_pkey PRIMARY KEY (id);


--
-- TOC entry 4778 (class 2606 OID 459123)
-- Name: tickets uq_showtime_seat; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.tickets
    ADD CONSTRAINT uq_showtime_seat UNIQUE (showtime_id, seat_number);


--
-- TOC entry 4749 (class 2606 OID 459024)
-- Name: users users_email_key; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.users
    ADD CONSTRAINT users_email_key UNIQUE (email);


--
-- TOC entry 4751 (class 2606 OID 459022)
-- Name: users users_pkey; Type: CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.users
    ADD CONSTRAINT users_pkey PRIMARY KEY (id);


--
-- TOC entry 4754 (class 1259 OID 459036)
-- Name: idx_cinemas_city; Type: INDEX; Schema: public; Owner: postgres
--

CREATE INDEX idx_cinemas_city ON public.cinemas USING btree (city);


--
-- TOC entry 4758 (class 1259 OID 459062)
-- Name: idx_movies_title; Type: INDEX; Schema: public; Owner: postgres
--

CREATE INDEX idx_movies_title ON public.movies USING btree (title);


--
-- TOC entry 4766 (class 1259 OID 459110)
-- Name: idx_orders_order_code; Type: INDEX; Schema: public; Owner: postgres
--

CREATE INDEX idx_orders_order_code ON public.orders USING btree (order_code);


--
-- TOC entry 4767 (class 1259 OID 459112)
-- Name: idx_orders_status; Type: INDEX; Schema: public; Owner: postgres
--

CREATE INDEX idx_orders_status ON public.orders USING btree (status);


--
-- TOC entry 4768 (class 1259 OID 459111)
-- Name: idx_orders_user_id; Type: INDEX; Schema: public; Owner: postgres
--

CREATE INDEX idx_orders_user_id ON public.orders USING btree (user_id);


--
-- TOC entry 4761 (class 1259 OID 459083)
-- Name: idx_showtimes_movie_id; Type: INDEX; Schema: public; Owner: postgres
--

CREATE INDEX idx_showtimes_movie_id ON public.showtimes USING btree (movie_id);


--
-- TOC entry 4762 (class 1259 OID 459085)
-- Name: idx_showtimes_status; Type: INDEX; Schema: public; Owner: postgres
--

CREATE INDEX idx_showtimes_status ON public.showtimes USING btree (status);


--
-- TOC entry 4763 (class 1259 OID 459084)
-- Name: idx_showtimes_studio_start; Type: INDEX; Schema: public; Owner: postgres
--

CREATE INDEX idx_showtimes_studio_start ON public.showtimes USING btree (studio_id, start_time);


--
-- TOC entry 4755 (class 1259 OID 459051)
-- Name: idx_studios_cinema_id; Type: INDEX; Schema: public; Owner: postgres
--

CREATE INDEX idx_studios_cinema_id ON public.studios USING btree (cinema_id);


--
-- TOC entry 4773 (class 1259 OID 459134)
-- Name: idx_tickets_order_id; Type: INDEX; Schema: public; Owner: postgres
--

CREATE INDEX idx_tickets_order_id ON public.tickets USING btree (order_id);


--
-- TOC entry 4774 (class 1259 OID 459135)
-- Name: idx_tickets_showtime_seat; Type: INDEX; Schema: public; Owner: postgres
--

CREATE INDEX idx_tickets_showtime_seat ON public.tickets USING btree (showtime_id, seat_number);


--
-- TOC entry 4747 (class 1259 OID 459025)
-- Name: idx_users_email; Type: INDEX; Schema: public; Owner: postgres
--

CREATE INDEX idx_users_email ON public.users USING btree (email);


--
-- TOC entry 4782 (class 2606 OID 459105)
-- Name: orders orders_showtime_id_fkey; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.orders
    ADD CONSTRAINT orders_showtime_id_fkey FOREIGN KEY (showtime_id) REFERENCES public.showtimes(id) ON DELETE RESTRICT;


--
-- TOC entry 4783 (class 2606 OID 459100)
-- Name: orders orders_user_id_fkey; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.orders
    ADD CONSTRAINT orders_user_id_fkey FOREIGN KEY (user_id) REFERENCES public.users(id) ON DELETE RESTRICT;


--
-- TOC entry 4780 (class 2606 OID 459073)
-- Name: showtimes showtimes_movie_id_fkey; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.showtimes
    ADD CONSTRAINT showtimes_movie_id_fkey FOREIGN KEY (movie_id) REFERENCES public.movies(id) ON DELETE CASCADE;


--
-- TOC entry 4781 (class 2606 OID 459078)
-- Name: showtimes showtimes_studio_id_fkey; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.showtimes
    ADD CONSTRAINT showtimes_studio_id_fkey FOREIGN KEY (studio_id) REFERENCES public.studios(id) ON DELETE CASCADE;


--
-- TOC entry 4779 (class 2606 OID 459046)
-- Name: studios studios_cinema_id_fkey; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.studios
    ADD CONSTRAINT studios_cinema_id_fkey FOREIGN KEY (cinema_id) REFERENCES public.cinemas(id) ON DELETE CASCADE;


--
-- TOC entry 4784 (class 2606 OID 459124)
-- Name: tickets tickets_order_id_fkey; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.tickets
    ADD CONSTRAINT tickets_order_id_fkey FOREIGN KEY (order_id) REFERENCES public.orders(id) ON DELETE CASCADE;


--
-- TOC entry 4785 (class 2606 OID 459129)
-- Name: tickets tickets_showtime_id_fkey; Type: FK CONSTRAINT; Schema: public; Owner: postgres
--

ALTER TABLE ONLY public.tickets
    ADD CONSTRAINT tickets_showtime_id_fkey FOREIGN KEY (showtime_id) REFERENCES public.showtimes(id) ON DELETE RESTRICT;


-- Completed on 2026-09-15 11:13:00

--
-- PostgreSQL database dump complete
--

