Table users {
  id bigserial [pk]
  name varchar(100) [not null]
  email varchar(100) [unique, not null]
  password varchar(255) [not null]
  role varchar(20) [not null, default: 'customer', note: 'admin / customer']
  created_at timestamp [default: `now()`]
}

Table cinemas {
  id serial [pk]
  name varchar(100) [not null, note: 'Contoh: XXI Grand Indonesia, CGV Paris Van Java']
  city varchar(100) [not null, note: 'Contoh: Jakarta, Surabaya, Semarang, Bali']
  address text
  created_at timestamp [default: `now()`]
}

Table studios {
  id serial [pk]
  cinema_id int [not null, ref: > cinemas.id]
  name varchar(50) [not null, note: 'Contoh: Studio 1, IMAX, Premiere']
  total_seats int [not null, default: 50]
  created_at timestamp [default: `now()`]
}

Table movies {
  id serial [pk]
  title varchar(200) [not null]
  duration_minutes int [not null]
  genre varchar(100)
  poster_url varchar(255)
  created_at timestamp [default: `now()`]
}

Table showtimes {
  id bigserial [pk]
  movie_id int [not null, ref: > movies.id]
  studio_id int [not null, ref: > studios.id]
  start_time timestamp [not null]
  end_time timestamp [not null]
  price decimal(10, 2) [not null]
  status varchar(20) [not null, default: 'scheduled', note: 'scheduled, ongoing, completed, cancelled']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (studio_id, start_time)
    movie_id
  }
}

Table orders {
  id bigserial [pk]
  order_code varchar(50) [unique, not null]
  user_id bigint [not null, ref: > users.id]
  showtime_id bigint [not null, ref: > showtimes.id]
  total_amount decimal(10, 2) [not null]
  status varchar(20) [not null, default: 'pending', note: 'pending, paid, expired, cancelled, refunded']
  refund_reason text [note: 'Diisi jika bioskop membatalkan jadwal atau ada refund']
  payment_deadline timestamp [not null, note: 'Batas bayar, misal 10 menit setelah checkout']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    order_code
    user_id
    status
  }
}

Table tickets {
  id bigserial [pk]
  order_id bigint [not null, ref: > orders.id]
  showtime_id bigint [not null, ref: > showtimes.id]
  seat_number varchar(10) [not null, note: 'Contoh: A1, A2, B5']
  price decimal(10, 2) [not null]
  status varchar(20) [not null, default: 'locked', note: 'locked, booked, cancelled, refunded']
  created_at timestamp [default: `now()`]

  indexes {
    (showtime_id, seat_number) [unique] // Menjamin kursi tidak bisa dibooking ganda pada jadwal yang sama
    order_id
  }
}
